--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "tailwind": "^4.0.0",
     "tailwindcss-animated": "^1.1.2",
     "vite": "^5.4.2"
   }
